force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/Permit_Form_Config__mdt.object-meta.xml
<CustomObject>
    <fullName>Permit_Form_Config__mdt</fullName>
    <description>Configuration for permit forms across different agencies and permit types</description>
    <label>Permit Form Configuration</label>
    <pluralLabel>Permit Form Configurations</pluralLabel>
</CustomObject>