force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <length>50</length>
    <type>Text</type>
    <description>Type of agency (FEDERAL, STATE, LOCAL)</description>
</CustomField>