force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Fee_Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Fee_Rules_JSON__c</fullName>
    <description>JSON configuration for fee calculation rules</description>
    <label>Fee Rules JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>