force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Optional_Documents_JSON__c.field-meta.xml
<CustomField>
    <fullName>Optional_Documents_JSON__c</fullName>
    <description>JSON configuration for optional documents</description>
    <label>Optional Documents JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>