force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <description>Type of permit (DRILLING, CONSTRUCTION, etc.)</description>
    <label>Permit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>