force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Required_Documents_JSON__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents_JSON__c</fullName>
    <label>Required Documents JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description>JSON configuration for required documents</description>
</CustomField>