force-app/main/Government_Documents/Permit_And_Licensing/objects/Permit_Form_Config__mdt/fields/Steps_JSON__c.field-meta.xml
<CustomField>
    <fullName>Steps_JSON__c</fullName>
    <label>Steps JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description>JSON configuration for form steps</description>
</CustomField>